corrected spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@
 .btn-secondary{
     background-color: rgb(59, 57, 57);
     font-family: 'Georgia', Times, 'Times New Roman', serif;
+
 }
 
 body{
@@ -54,7 +55,9 @@ html, body{
     background-color: #ffffff;
     margin-top: 25px;
     border-radius: 2px;
-
+}
+#spacing{
+    margin-top: 25px;
 }
 #second{
     background-color: #ffffff;
@@ -64,7 +67,7 @@ background-color: #ffffff;
 }
 h1{
     color:  rgb(59, 57, 57);
-padding-left: 15px;
+margin-left: 15px;
 background-color: #ffffff;
 }
 
@@ -90,6 +93,15 @@ line-height: 18px;
 }
 .col-md-9{
     background-color: #ffffff;
+}
+.form-group{
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+#submit{
+    margin-left: 10px;
+    margin-bottom: 5px;
 }
 .footer{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
